k8s/routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: secure-prod
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: secure-prod
spec:
rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
                  
          # --- НАШ НОВЫЙ МАРШРУТ ДЛЯ БАЗЫ ДАННЫХ ---
          - path: /test-db
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 5000
          # -----------------------------------------

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 8080
