k8s/backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: secure-prod
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-backend
  namespace: secure-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        checkov.io/skip1: CKV_K8S_15=Local Minikube requires Never pull policy
        checkov.io/skip2: CKV_K8S_43=Local dev does not use SHA256 digests
        checkov.io/skip3: CKV_K8S_35=Environment variables are acceptable for local demo
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: python-backend
        image: ghcr.io/max1477/hardened-k8s-infrastructure/my-secure-backend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            path: /api/margin
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/margin
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: tmp-volume
        emptyDir: {}
template:
    spec:
      containers:
        - name: backend
          image: ghcr.io/max1477/hardened-k8s-infrastructure/my-secure-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000 # Порт, на котором слушает ваше приложение
          
          # ДОБАВЛЯЕМ ЭТОТ БЛОК ПЕРЕМЕННЫХ ОКРУЖЕНИЯ:
